TP-4538 - fixed the gallery caption alignment

--- a/drupal/sites/all/themes/fresh/sass/page/_fresh-gallery.scss
+++ b/drupal/sites/all/themes/fresh/sass/page/_fresh-gallery.scss
@@ -111,11 +111,11 @@
   .image-caption {
     font-size: 14px;
     line-height: 23px;
-
+    margin-top: 13px;
 
     p {
-      margin-bottom: 0;
-      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-top: 0;
     }
   }
 
